kubernetes-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-project
  namespace: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kiii-project
  template:
    metadata:
      labels:
        app: kiii-project
    spec:
      containers:
        - name: kiii-project
          image: filip16avr/kiii_project:latest
          ports:
            - containerPort: 9091
