kubernetes-manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  namespace: devops
spec:
  selector:
    app: kiii-project
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
